--- a/demo_app/Gemfile
+++ b/demo_app/Gemfile
@@ -37,6 +37,8 @@ group :development, :test do
   gem 'protected_attributes'
   gem 'factory_girl_rails', '1.0'
   gem 'gravatar_image_tag', '0.1.0'
+  gem 'faker', '0.3.1'
+  gem 'will_paginate'
 end
 
 group :production do
